# faucet

./: .gitignore  Cargo.toml  README.md  dactle.sh  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: nodejs.yml
__tests__/: dactle.ts
src/: bot.ts  config.ts  errors.rs  external.rs  grammer.ts  initializer.rs  main.rs  router.rs
src/db/: index.ts  json.ts
src/enhance/middleware/: error_handler.rs
src/route/: generic.rs  mod.rs
src/route/v1/: faucet.rs
src/services/: faucet.rs
src/state/: app.rs  mod.rs
src/static/: config.json  grammer.yml  types.json
src/types/: config.rs  form.rs  mod.rs
telegram-bot/: README.md  dactle.sh  index.ts  package-lock.json  package.json  tsconfig.json  tslint.json
telegram-bot/__tests__/: dactle.ts  db.ts
telegram-bot/src/: bot.ts  config.ts  grammer.ts
telegram-bot/src/db/: redis.ts  schema.ts
telegram-bot/src/static/: config.json  grammer.yml  types.json
