[package]
authors       = ["Darwinia Network <hello@darwinia.network>"]
description   = "darwinia faucet"
documentation = "https://rust-docs.darwinia.network/bridger"
edition       = "2021"
homepage      = "https://github.com/darwinia-network/bridger"
include       = ["Cargo.toml", "**/*.rs", "README.md", "LICENSE", "src/BSCValidatorSet_abi.json"]
keywords      = ["substrate", "darwinia"]
license       = "MIT"
name          = "faucet"
readme        = 'README.md'
repository    = "https://github.com/darwinia-network/bridger"
version       = "0.1.0"

[dependencies]
