[package]
authors       = ["Darwinia Network <hello@darwinia.network>"]
description   = "darwinia faucet"
documentation = "https://rust-docs.darwinia.network/bridger"
edition       = "2021"
homepage      = "https://github.com/darwinia-network/bridger"
include       = ["Cargo.toml", "**/*.rs", "README.md", "LICENSE", "src/BSCValidatorSet_abi.json"]
keywords      = ["substrate", "darwinia"]
license       = "MIT"
name          = "faucet"
readme        = 'README.md'
repository    = "https://github.com/darwinia-network/bridger"
version       = "0.1.0"

[dependencies]

tracing    = "0.1"
color-eyre = "0.6"
sentry     = "0.31"
serde      = { version = "1", features = ["derive"] }

actix-web          = "4"
actix-cors         = "0.6"
actix-web-lab      = "0.19"
actix-governor     = "0.4"

strawberry-config      = { git = "https://gitlab.com/repotea-workspace/pattery", branch = "enhance" }
strawberry-common      = { git = "https://gitlab.com/repotea-workspace/pattery", branch = "enhance" }
strawberry-initializer = { git = "https://gitlab.com/repotea-workspace/pattery", branch = "enhance" }
strawberry-actix-web   = { git = "https://gitlab.com/repotea-workspace/pattery", branch = "enhance" }


[features]
default = []
debug   = []
